# yoptascript-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  DICTIONARY.md  Justfile  LICENSE-MIT  README.md  clippy.toml  deny.toml  rustfmt.toml
crates/yps-bench/: Cargo.toml
crates/yps-bench/benches/: interpreter_vs_vm.rs
crates/yps-bench/benches/programs/: arrays.yopta  closures.yopta  fib.yopta  objects.yopta  strings.yopta
crates/yps-cli/: Cargo.toml
crates/yps-cli/src/: main.rs  repl.rs
crates/yps-cli/tests/: cli.rs  conformance.rs  vm_conformance.rs
crates/yps-cli/tests/conformance/cases/: arr_at.yop  arr_concat_join.yop  arr_fill_copywithin_iter.yopta  arr_flat.yop  arr_immutable.yopta  arr_indexof.yopta  arr_iteration.yop  arr_reduce.yopta  arr_sort.yop  arr_splice.yopta  async_any_race.yop  async_await_basics.yopta  async_finally_semantics.yopta  async_gen.yopta  async_microtask_nested.yopta  async_then_chaining.yop  big_arithmetic.yopta  big_mixed.yop  clo_loop_capture.yopta  clo_nested_capture.yop  cls_inherit_super.yop  cls_instanceof.yopta  cls_static.yop  cls_static_block.yopta  cls_this_binding.yop  cls_this_binding.yopta  cls_three_level.yopta  coercion_user_hooks.yop  coll_map.yopta  coll_map_nan_negzero.yop  coll_set.yopta  coll_setops.yopta  date_setters_utc.yopta  destr_rest.yopta  destr_spread.yop  example_async_timers.yop  example_decorators.yop  example_destructuring_defaults.yop  example_dynamic_import.yopta  example_event_loop.yopta  (+56 more)
crates/yps-cli/tests/conformance/golden/: KNOWN_DIVERGENCES.md  arr_at.txt  arr_concat_join.txt  arr_fill_copywithin_iter.txt  arr_flat.txt  arr_immutable.txt  arr_indexof.txt  arr_iteration.txt  arr_reduce.txt  arr_sort.txt  arr_splice.txt  async_all_allsettled.txt  async_any_race.txt  async_await_basics.txt  async_await_timer_order.txt  async_finally_semantics.txt  async_gen.txt  async_microtask_nested.txt  async_then_chaining.txt  big_arithmetic.txt  big_construct.txt  big_mixed.txt  clo_block_scope.txt  clo_loop_capture.txt  clo_nested_capture.txt  cls_inherit_super.txt  cls_static.txt  cls_static_block.txt  cls_this_binding.txt  cls_three_level.txt  coercion_user_hooks.txt  coll_map.txt  coll_map_nan_negzero.txt  coll_set.txt  coll_setops.txt  date_setters_utc.txt  destr_defaults_holes.txt  destr_nested.txt  destr_rest.txt  destr_spread.txt  (+70 more)
crates/yps-cli/tests/conformance/mirror/: arr_at.js  arr_concat_join.js  arr_fill_copywithin_iter.js  arr_flat.js  arr_immutable.js  arr_indexof.js  arr_iteration.js  arr_reduce.js  arr_sort.js  arr_splice.js  async_all_allsettled.js  async_any_race.js  async_await_basics.js  async_await_timer_order.js  async_finally_semantics.js  async_gen.js  async_microtask_nested.js  async_microtask_order.js  async_then_chaining.js  big_arithmetic.js  big_compare.js  big_construct.js  big_mixed.js  clo_block_scope.js  clo_counter.js  clo_loop_capture.js  clo_nested_capture.js  cls_inherit_super.js  cls_instanceof.js  cls_static.js  cls_static_block.js  cls_this_binding.js  cls_three_level.js  coercion_add.js  coercion_equality.js  coercion_stringify.js  coercion_user_hooks.js  coll_map.js  coll_map_nan_negzero.js  coll_set.js  (+69 more)
crates/yps-cli/tests/vm_conformance/: arrays_objects.yop  async_await_values.yopta  async_reject_catch.yopta  bigint_arith.yopta  bigint_compare.yopta  binop_in.yopta  class_accessors.yopta  class_basic.yopta  class_inherit_super.yopta  class_instanceof.yopta  class_static.yop  coerce_to_string.yopta  compound_member.yopta  conf_array_methods.yopta  conf_async_all_allsettled.yopta  conf_async_await_timer_order.yop  conf_async_microtask_order.yopta  conf_big_compare.yopta  conf_big_construct.yop  conf_clo_block_scope.yopta  conf_clo_counter.yop  conf_cls_inherit_super.yopta  conf_cls_instanceof.yop  conf_cls_three_level.yopta  conf_coercion_stringify.yopta  conf_destr_defaults_holes.yop  conf_destr_nested.yop  conf_gen_basics_two_way.yopta  conf_gen_return_method.yopta  conf_gen_throw_method.yopta  conf_gen_yield_delegate.yopta  conf_host_buffer_view.yop  conf_host_buffer_view.yopta  conf_host_date.yop  conf_host_date.yopta  conf_host_iterator.yopta  conf_host_map.yop  conf_host_map.yopta  conf_host_namespaces.yop  conf_host_proxy.yopta  (+87 more)
crates/yps-cli/tests/vm_conformance/modules/: data.json
crates/yps-interpreter/: Cargo.toml
crates/yps-interpreter/src/: builtins.rs  environment.rs  error.rs  host_callback.rs  interpreter.rs  lib.rs  resolver.rs  symbols.rs  value.rs
crates/yps-interpreter/src/interpreter/: assign.rs  call.rs  class.rs  coercion.rs  delete.rs  eval_expr.rs  event_loop.rs  exec_stmt.rs  gc.rs  generator.rs  host_api.rs  member.rs  mod.rs  module_loader.rs  promise_rt.rs  proxy.rs  tests.rs  types.rs  user_iter.rs
crates/yps-interpreter/src/interpreter/tests/: aliases.rs  assign.rs  async_promise.rs  builtins_misc.rs  classes.rs  coercion.rs  collections.rs  control_flow.rs  decorators.rs  destructure.rs  event_loop.rs  expressions.rs  functions.rs  gc.rs  generators.rs  iterators.rs  limits.rs  mod.rs  modules.rs  operators.rs  proto.rs  proxy.rs  ref_semantics.rs  regex.rs  repl.rs  resolver_scopes.rs  runtime_errors.rs  stack_traces.rs  (+6 more)
crates/yps-interpreter/src/resolver/: tests.rs
crates/yps-interpreter/src/stdlib/: abort.rs  array.rs  console.rs  data_view.rs  date.rs  error.rs  fs.rs  iterator.rs  json.rs  map.rs  math.rs  mod.rs  network.rs  number.rs  object.rs  process.rs  promise.rs  proxy.rs  reflect.rs  regexp.rs  set.rs  stdio.rs  string.rs  string_ns.rs  symbol.rs  typed_array.rs  weak.rs
crates/yps-interpreter/tests/: conformance.rs
crates/yps-lsp/: Cargo.toml
crates/yps-lsp/src/: builtins.rs  completion.rs  definition.rs  diagnostics.rs  format.rs  hover.rs  lib.rs  main.rs  position.rs  rename.rs  symbols.rs  types.rs
crates/yps-vm/: Cargo.toml
crates/yps-vm/src/: bridge.rs  builtins.rs  chunk.rs  compiler.rs  error.rs  gc.rs  lib.rs  methods.rs  promise.rs  regexp.rs  tests.rs  value.rs  vm.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: exec_diff.rs  fmt_roundtrip.rs  lexer.rs  parser.rs
(+101 files in other folders)
