[workspace]
members = [
    "crates/yps-cli",
    "crates/yps-fmt",
    "crates/yps-interpreter",
    "crates/yps-lexer",
    "crates/yps-lsp",
    "crates/yps-parser",
    "crates/yps-vm",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
publish = false
