[workspace]
members = [
    "crates/yps-bench",
    "crates/yps-cli",
    "crates/yps-fmt",
    "crates/yps-interpreter",
    "crates/yps-lexer",
    "crates/yps-lsp",
    "crates/yps-parser",
    "crates/yps-vm",
]
resolver = "3"

[workspace.package]
version = "1.7.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
yps-bench = { path = "crates/yps-bench" }
yps-cli = { path = "crates/yps-cli" }
yps-fmt = { path = "crates/yps-fmt" }
yps-interpreter = { path = "crates/yps-interpreter" }
yps-lexer = { path = "crates/yps-lexer" }
yps-lsp = { path = "crates/yps-lsp" }
yps-parser = { path = "crates/yps-parser" }
yps-vm = { path = "crates/yps-vm" }
criterion = "0.8.2"
fancy-regex = "0.18.0"
indexmap = "2"
regex = "1"
rustyline = "18.0.1"
stacker = "0.1"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
unicode-normalization = "0.1.25"
