[package]
name = "yps-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
yps-lexer.workspace = true
yps-parser.workspace = true
yps-interpreter.workspace = true
yps-vm.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "interpreter_vs_vm"
harness = false
