[package]
name = "yps-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
yps-fmt = { path = "../yps-fmt" }
yps-interpreter = { path = "../yps-interpreter" }
yps-lexer = { path = "../yps-lexer" }
yps-parser = { path = "../yps-parser" }
