[package]
name = "yps-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rustyline.workspace = true
yps-fmt.workspace = true
yps-interpreter.workspace = true
yps-lexer.workspace = true
yps-parser.workspace = true
yps-vm.workspace = true
