[package]
name = "yps-interpreter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
yps-lexer = { path = "../yps-lexer" }
yps-parser = { path = "../yps-parser" }
regex = "1"
stacker = "0.1"
indexmap = "2"
