[package]
name = "yps-interpreter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
yps-lexer.workspace = true
yps-parser.workspace = true
regex.workspace = true
stacker.workspace = true
indexmap.workspace = true
fancy-regex.workspace = true
