[package]
name = "yps-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "yps-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp.workspace = true
tokio.workspace = true
yps-lexer.workspace = true
yps-parser.workspace = true
yps-interpreter.workspace = true
yps-fmt.workspace = true
