[package]
name = "yps-vm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
yps-lexer = { path = "../yps-lexer" }
yps-parser = { path = "../yps-parser" }
yps-interpreter = { path = "../yps-interpreter" }
indexmap = "2"
regex = "1"
fancy-regex = "0.18.0"
stacker = "0.1"
