[package]
name = "yps-vm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
yps-lexer.workspace = true
yps-parser.workspace = true
yps-interpreter.workspace = true
indexmap.workspace = true
stacker.workspace = true
